@@ -20,6 +20,6 @@ function dkan_sitewide_search_db_update_7109() {
     showing either a) nothing or b) all nodes regardless of type in your
     search/datasets pages. This problem can be easily fixed by following the
     instructions in the release notes at
-    https://github.com/NuCivic/dkan/releases/tag/7.x-1.9 or in CHANGELOG.txt.'
+    https://github.com/GetDKAN/dkan/releases/tag/7.x-1.9 or in CHANGELOG.txt.'
   );
 }
