@@ -1,5 +1,6 @@
 7.x-1.14
 --------
+ - #2188 Move DKAN repository to GetDKAN organization in Github 
  - #2205 Update docs files with organization changes (NuCivic to GetDKAN)
  - #2206 Update autocomplete_deluxe, better_exposed_filters, file_entity, media, media_youtube, tablefield and views to latest version
  - #2189 #2190 Documentation updates (Add help, license, dkan sites pages. Update site manager guide. Update dkan README.)
